Styling fixes for Export button | bucketing visible to non-admin users

--- a/client/app/search/style.less
+++ b/client/app/search/style.less
@@ -94,10 +94,7 @@
     .download {
       border: none;
       background: transparent;
-
-      img {
-        opacity: 0.75;
-      }
+      font-size: 0.9rem;
     }
   }
 }
