--- a/client/common/list-container/list-searcher/style.less
+++ b/client/common/list-container/list-searcher/style.less
@@ -30,7 +30,7 @@
   }
 
   .clear-search {
-    right: 1.5rem;
+    right: 2.25rem;
     position: relative;
     margin-right: -0.5rem;
     background: no-repeat;
