--- a/client/style.less
+++ b/client/style.less
@@ -29,8 +29,8 @@
   }
 
   .icon {
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 2.25rem;
+    height: 2.25rem;
   }
 
   button {
